Adds various bootstrap classes

--- a/index.html
+++ b/index.html
@@ -19,27 +19,42 @@
         tincidunt quis. Suspendisse fringilla, orci eu aliquet ultricies, libero ipsum maximus massa, et mollis leo
         massa
         sed felis. Suspendisse molestie elit non mollis gravida.</p>
-      <h2>Lorem Ipsum</h2>
-      <ul>
-        <li>Lorem ipsum dolor sit amet</li>
-        <li>Consectetur adipiscing elit</li>
-        <li>Integer finibus</li>
-        <li>Nisl tempus semper semper</li>
-        <li>Purus nisl hendrerit tellus</li>
-      </ul>
-      <h2>Et Consequat Magna</h2>
-      <ul>
-        <li>Orci ut velit</li>
-        <li>Pellentesque cursus justo</li>
-        <li>In felis condimentum cursus</li>
-      </ul>
-      <ul>
-        <li>Proin dignissim lectus enim</li>
-        <li>Eu bibendum mauris euismod in</li>
-        <li>Morbi dictum</li>
-        <li>Ex et malesuada pellentesque</li>
-      </ul>
-      <h2>Morbi Lacinia Mollis Tortor</h2>
+      <div class="card">
+        <div class="card-body">
+          <h2>Lorem Ipsum</h2>
+          <ul>
+            <li class="bg-danger">Lorem ipsum dolor sit amet</li>
+            <li>Consectetur adipiscing elit</li>
+            <li>Integer finibus</li>
+            <li class="bg-danger">Nisl tempus semper semper</li>
+            <li>Purus nisl hendrerit tellus</li>
+          </ul>
+
+        </div>
+      </div>
+
+      <div class="card bg-primary">
+        <div class="card-title">
+          <h2>Et Consequat Magna</h2>
+        </div>
+        <div class="card-body">
+          <ul>
+            <li>Orci ut velit</li>
+            <li>Pellentesque cursus justo</li>
+            <li>In felis condimentum cursus</li>
+          </ul>
+          <ul>
+            <li>Proin dignissim lectus enim</li>
+            <li>Eu bibendum mauris euismod in</li>
+            <li>Morbi dictum</li>
+            <li>Ex et malesuada pellentesque</li>
+          </ul>
+        </div>
+        <div class="card-footer">
+          <p>A footer for this specific card</p>
+        </div>
+      </div>
+      <h2 class="bg-success">Morbi Lacinia Mollis Tortor</h2>
       <ul>
         <li>A sodales elit tempor ut</li>
         <li>Ut elit augue</li>
